--- a/public/create/index.html
+++ b/public/create/index.html
@@ -12,6 +12,7 @@
   </header>
   <main>
     <!-- Michael  -->
+  <button class="addvid" type="button" id="add-video">Add a Video</button>
   </main>
   <footer>
 
