Add div wrapper around button to center it

--- a/public/create/index.html
+++ b/public/create/index.html
@@ -12,7 +12,9 @@
   </header>
   <main>
     <!-- Michael  -->
-  <button class="addvid" type="button" id="add-video">Add a Video</button>
+  <div class="addvid" style="text-align:center">
+    <button class="addvid" type="button" id="add-video">Add a Video</button>
+  </div>
   </main>
   <footer>
 
