--- a/public/create/index.html
+++ b/public/create/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Collabor8</title>
+  <title>Watch Party</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous" />
   <link rel="stylesheet" href="/stylesheets/screen.css" />
 </head>
 <body>
   <header id="header">
     <!-- Chiachi  -->
+    <a href="#" class="logo"><i class="fas fa-couch"></i> Watch Party</a>
+    <div class="header-right">
+      <a href="#party-room">Chat <i class="far fa-comment-dots"></i></a>
+      <a type="button" onclick="alert('URL')">Copy link <i class="fas fa-link"></i></a>
+      <span class="welcome">Welcome! </span>
+      <span>Room ID: </span>
+      <a class="button" href="/">End the party</a>
+    </div>
   </header>
   <main>
     <!-- Michael  -->
