--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Collabor8</title>
+  <title>Watch Party</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous" />
   <link rel="stylesheet" href="/stylesheets/screen.css" />
 </head>
 <body>
-  <header id="header">
+  <header>
     <!-- Chiachi  -->
+    <a href=" " class="logo"><i class="fas fa-couch"></i> Watch Party</a>
   </header>
   <main>
     <!-- David  -->
   </main>
   <footer>
-    
+
   </footer>
   <script src="/socket.io/socket.io.js"></script>
   <script src="/javascripts/main.js"></script>
