--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" id="home-page">
 <head>
   <title>Collabor8</title>
   <meta charset="utf-8" />
@@ -12,9 +12,30 @@
   </header>
   <main>
     <!-- David  -->
+    <article id="CreatePopUp">
+      <form id="CreateForm" action="#null" method="get">
+        <input id="RoomID" type="number" autocomplete="off" placeholder="859214" readonly/>
+        <input class="Name" type="text" autocomplete="off" placeholder="Your Name"/>
+        <button id="CreateFormButton" type="submit">Create Party</button>
+      </form>
+    </article>
+
+    <article id="ButtonOptions">
+      <button type="button" id="CreatePartyButton">Create a Party!</button>
+      <button type="button" id="JoinPartyButton">Join a Party!</button>
+    </article>
+
+    <article id="JoinPopUp">
+      <form id="JoinForm" action="#null" method="get">
+        <input id="RoomID" type="number" autocomplete="off" placeholder="859214"/>
+        <input class="Name" type="text" autocomplete="off" placeholder="Your Name"/>
+        <button id="JoinFormButton" type="submit">Join Party</button>
+      </form>
+    </article>
+
   </main>
   <footer>
-    
+
   </footer>
   <script src="/socket.io/socket.io.js"></script>
   <script src="/javascripts/main.js"></script>
