Move in-line CSS to proper file

--- a/public/create/index.html
+++ b/public/create/index.html
@@ -12,7 +12,7 @@
   </header>
   <main>
     <!-- Michael  -->
-  <div class="addvid" style="text-align:center">
+  <div class="addvid">
     <button class="addvid" type="button" id="add-video">Add a Video</button>
   </div>
   </main>
