Add html articles to divide work. Video article, Peers article, Data article.

--- a/public/party-room/index.html
+++ b/public/party-room/index.html
@@ -11,7 +11,23 @@
     <!-- Chiachi  -->
   </header>
   <main>
-  
+
+
+    <article id="video">
+      <!-- Chiachi  -->
+
+    </article>
+
+    <article id="peers">
+      <!-- David  -->
+
+    </article>
+
+    <article id="data">
+      <!-- Michael  -->
+
+    </article>
+
   </main>
   <footer>
 
