--- a/public/party-room/index.html
+++ b/public/party-room/index.html
@@ -20,7 +20,7 @@
     </div>
   </header>
   <main>
-    
+
     <article id="video">
       <!-- Chiachi  -->
 
@@ -32,10 +32,17 @@
     </article>
 
     <article id="data">
-      <!-- Michael  -->
+      <h2 id="chat-head">Chat Room</h2>
+      <button class="closechat" type="button" id="closechat">Close Chat</button>
+        <form id="chatform" action="#null" class="chat-box">
+          <ol id="chat-log">
+          </ol>
+          <label for="message"></label>
+          <input id="message" type="text" required />
+          <button class="sendbutton" type="submit" id="send-chat">Send</button>
+        </form>
+      </article>
 
-    </article>
-  
   </main>
   <footer>
 
