--- a/public/party-room/index.html
+++ b/public/party-room/index.html
@@ -23,7 +23,12 @@
 
     <article id="video">
       <!-- Chiachi  -->
-
+      <div id="player"></div>
+      <div id="spacebar">
+        <span id="play-video"><i class="far fa-play-circle"></i></span>
+        <span id="pause-video"><i class="far fa-pause-circle"></i></span>
+        <span id="stop-video"><i class="far fa-stop-circle"></i></span>
+      </div>
     </article>
 
     <article id="peers">
