Place peers and self video into figures and add fig captions for names

--- a/public/party-room/index.html
+++ b/public/party-room/index.html
@@ -35,19 +35,24 @@
       <!-- David  -->
       <h2>Videos: </h2>
 
-      <video id="self"
-      autoplay
-      muted
-      playsinline
-      poster="../images/placeholder.jpg">
-      </video>
+      <figure id="self">
+        <video id="selfVideo"
+        autoplay
+        muted
+        playsinline
+        poster="../images/placeholder.jpg">
+        </video>
+        <figcaption>Self</figcaption>
+      </figure>
 
-      <video id="peer"
-      autoplay
-      muted
-      playsinline
-      poster="../images/placeholder.jpg">
-      </video>
+      <figure id="peers">
+        <video id="peerVideos"
+        autoplay
+        muted
+        playsinline
+        poster="../images/placeholder.jpg">
+        </video>
+      </figure>
 
     </article>
 
