--- a/public/party-room/index.html
+++ b/public/party-room/index.html
@@ -31,7 +31,7 @@
       </div>
     </article>
 
-    <article id="peers">
+    <article id="userVideos">
       <!-- David  -->
       <h2>Videos: </h2>
 
