give userVideos a title of h2 with an id

--- a/public/party-room/index.html
+++ b/public/party-room/index.html
@@ -33,7 +33,7 @@
 
     <article id="userVideos">
       <!-- David  -->
-      <h2>Videos: </h2>
+      <h2 id="videoTitle">Party Mates</h2>
 
       <figure id="self">
         <video id="selfVideo"
