Set up signaling channel for multi-peers

--- a/public/party-room/index.html
+++ b/public/party-room/index.html
@@ -69,5 +69,6 @@
   </footer>
   <script src="../socket.io/socket.io.js"></script>
   <script src="../javascripts/main.js"></script>
+  <script src="../javascripts/webrtc.js"></script>
 </body>
 </html>
