--- a/public/party-room/index.html
+++ b/public/party-room/index.html
@@ -54,6 +54,7 @@
     <article id="data">
       <h2 id="chat-head">Chat Room</h2>
       <button class="closechat" type="button" id="closechat">Close Chat</button>
+      <button class="openchat" type="button" id="openchat" hidden >Open Chat</button>
         <form id="chatform" action="#null" class="chat-box">
           <ol id="chat-log">
           </ol>
