Edit placeholder and type for room id input

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
 -->
     <article id="JoinPopUp">
       <form id="JoinForm" action="#null" method="get">
-        <input id="RoomID" type="number" autocomplete="off" placeholder="859214"/>
+        <input id="RoomID" type="text" autocomplete="off" placeholder="fow-pve-vut"/>
         <input class="Name" type="text" autocomplete="off" placeholder="Your Name"/>
         <button id="JoinFormButton" type="submit">Join Party</button>
       </form>
