Add mute and unmute buttons as a workaround

--- a/public/party-room/index.html
+++ b/public/party-room/index.html
@@ -28,6 +28,7 @@
         <span id="play-video"><i class="far fa-play-circle"></i></span>
         <span id="pause-video"><i class="far fa-pause-circle"></i></span>
         <span id="stop-video"><i class="far fa-stop-circle"></i></span>
+        <span id="toggle-video-sound"><i class="fas fa-volume-mute"></i></span>
       </div>
     </article>
 
