Fix video chat id issue.

--- a/public/party-room/index.html
+++ b/public/party-room/index.html
@@ -36,7 +36,7 @@
       <!-- David  -->
       <h2 id="videoTitle">Party Mates</h2>
 
-      <figure id="self">
+      <figure id="video-self">
         <video id="selfVideo"
           autoplay
           muted
