Remove unnecessary input values

--- a/public/index.html
+++ b/public/index.html
@@ -16,15 +16,15 @@
     <!-- David  -->
     <article id="CreatePopUp">
       <form id="CreateForm" action="#null" method="get">
-        <input id="yourusername" type="text" autocomplete="off" placeholder="Your Name"/>
-        <button id="CreateFormButton" type="submitname">Create Party</button>
+      <!--  <input id="yourusername" class="Name" type="text" autocomplete="off" placeholder="Your Name"/> -->
+        <button id="CreateFormButton" type="button">Create Party</button>
       </form>
     </article>
 
     <article id="JoinPopUp">
       <form id="JoinForm" action="#null" method="get">
         <input id="RoomID" type="text" autocomplete="off" placeholder="fow-pve-vut"/>
-        <input id="username" class="Name" type="text" autocomplete="off" placeholder="Your Name"/>
+        <!--<input class="Name" type="text" autocomplete="off" placeholder="Your Name"/> -->
         <button id="JoinFormButton" type="submit">Join Party</button>
       </form>
     </article>
@@ -35,6 +35,6 @@
   </footer>
   <script src="/socket.io/socket.io.js"></script>
   <script src="/javascripts/main.js"></script>
-  <script src="../javascripts/webrtc.js"></script>
+
 </body>
 </html>
