Add form to insert personal username

--- a/public/party-room/index.html
+++ b/public/party-room/index.html
@@ -43,7 +43,12 @@
           playsinline
           poster="../images/placeholder.jpg">
         </video>
-        <figcaption>Self</figcaption>
+        <figcaption>
+          <form id="set-username" action="#null" >
+            <input id="your-username" type="text" placeholder="Username"/>
+            <button id="username-button" type="submit">SET</button>
+          </form>
+        </figcaption>
       </figure>
 
     </article>
