Revert to previous input fields

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <!-- David  -->
     <article id="CreatePopUp">
       <form id="CreateForm" action="#null" method="get">
-      <!--  <input id="yourusername" class="Name" type="text" autocomplete="off" placeholder="Your Name"/> -->
+      <input id="your-username" class="Name" type="text" autocomplete="off" placeholder="Your Name"/>ssssssssssssssssssssssssss
         <button id="CreateFormButton" type="button">Create Party</button>
       </form>
     </article>
@@ -24,7 +24,7 @@
     <article id="JoinPopUp">
       <form id="JoinForm" action="#null" method="get">
         <input id="RoomID" type="text" autocomplete="off" placeholder="fow-pve-vut"/>
-        <!--<input class="Name" type="text" autocomplete="off" placeholder="Your Name"/> -->
+        <input id="your-join-username" class="Name" type="text" autocomplete="off" placeholder="Your Name"/>
         <button id="JoinFormButton" type="submit">Join Party</button>
       </form>
     </article>
