--- a/public/party-room/index.html
+++ b/public/party-room/index.html
@@ -43,12 +43,11 @@
           playsinline
           poster="../images/placeholder.jpg">
         </video>
-        <figcaption>
-          <form id="set-username" action="#null" >
+        <figcaption>Self</figcaption>
+          <!--<form id="set-username" action="#null" >
             <input id="your-username" type="text" placeholder="Username"/>
             <button id="username-button" type="submit">SET</button>
-          </form>
-        </figcaption>
+          </form> -->
       </figure>
 
     </article>
