--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <!-- David  -->
     <article id="CreatePopUp">
       <form id="CreateForm" action="#null" method="get">
-      <input id="your-username" class="Name" type="text" autocomplete="off" placeholder="Your Name"/>ssssssssssssssssssssssssss
+      <input id="your-username" class="Name" type="text" autocomplete="off" placeholder="Your Name"/>
         <button id="CreateFormButton" type="button">Create Party</button>
       </form>
     </article>
