Add form input for video link

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     <article id="CreatePopUp">
       <form id="CreateForm" action="#null" method="get">
         <input id="yourusername" type="text" autocomplete="off" placeholder="Your Name"/>
+        <input id="youtubeURL" type="text" placeholder="Paste a YouTube URL here">
         <button id="CreateFormButton" type="submitname">Create Party</button>
       </form>
     </article>
