Slight HTML formatting changes

--- a/public/party-room/index.html
+++ b/public/party-room/index.html
@@ -9,15 +9,16 @@
 </head>
 <body>
   <header id="header">
-    <!-- Chiachi  -->
-    <a href="#" class="logo"><i class="fas fa-couch"></i> Watch Party</a>
-    <div class="header-right">
-      <span class="welcome">Welcome! </span>
-      <a href="#party-room">Chat <i class="far fa-comment-dots"></i></a>
-      <a type="button" onclick="alert('URL')">Copy Room ID<i class="fas fa-link"></i></a>
-      <a class="button" href="/">Leave the party</a>
-    </div>
-  </header>
+     <!-- Chiachi  -->
+     <a href="#" class="logo"><i class="fas fa-couch"></i> Watch Party</a>
+     <div class="header-right">
+       <span class="welcome">Welcome! </span>
+       <a href="#party-room">Chat <i class="far fa-comment-dots"></i></a>
+       <a type="button" onclick="alert('URL')">Copy link <i class="fas fa-link"></i></a>
+       <span>Room ID: </span>
+       <a class="button" href="/">End the party</a>
+     </div>
+   </header>
   <main>
 
     <article id="video">
