Add ID to span element in party roon HTML

--- a/public/party-room/index.html
+++ b/public/party-room/index.html
@@ -15,7 +15,7 @@
        <span class="welcome">Welcome! </span>
        <a href="#party-room">Chat <i class="far fa-comment-dots"></i></a>
        <a type="button" onclick="alert('URL')">Copy link <i class="fas fa-link"></i></a>
-       <span>Room ID: </span>
+       <span id="roomID" >Room ID: </span>
        <a class="button" href="/">End the party</a>
      </div>
    </header>
