--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <!-- Chiachi  -->
-    <a href=" " class="logo"><i class="fas fa-couch"></i> Watch Party</a>
+    <a href="/" class="logo"><i class="fas fa-couch"></i> Watch Party</a>
   </header>
   <main id="FirstPage">
     <!-- David  -->
