--- a/public/party-room/index.html
+++ b/public/party-room/index.html
@@ -14,7 +14,7 @@
      <div class="header-right">
        <span class="welcome">Welcome! </span>
        <a href="#party-room">Chat <i class="far fa-comment-dots"></i></a>
-       <a type="button" onclick="alert('URL')">Copy link <i class="fas fa-link"></i></a>
+       <a id="copy-link" type="button" href="#">Copy link <i class="fas fa-link"></i></a>
        <span>Room ID: </span>
        <a class="button" href="/">End the party</a>
      </div>
