--- a/public/party-room/index.html
+++ b/public/party-room/index.html
@@ -11,12 +11,11 @@
   <header id="header">
      <!-- Chiachi  -->
      <a href="#" class="logo"><i class="fas fa-couch"></i> Watch Party</a>
-     <div class="header-right">
+     <div id="nav-tool" class="header-right">
        <span class="welcome">Welcome! </span>
        <a href="#party-room">Chat <i class="far fa-comment-dots"></i></a>
        <a id="copy-link" type="button" href="#">Copy link <i class="fas fa-link"></i></a>
        <span>Room ID: </span>
-       <a class="button" href="/">End the party</a>
      </div>
    </header>
   <main>
