Change figcaption from self to you

--- a/public/party-room/index.html
+++ b/public/party-room/index.html
@@ -39,9 +39,9 @@
           autoplay
           muted
           playsinline
-          poster="../images/placeholder.jpg">
+          poster="../images/placeholder.png">
         </video>
-        <figcaption>Self</figcaption>
+        <figcaption>You</figcaption>
       </figure>
 
     </article>
